fixed image not showing in safari issue

--- a/assets/less/frontend-forms.less
+++ b/assets/less/frontend-forms.less
@@ -399,6 +399,7 @@ ul.wpuf-form {
                     border: 1px solid @borderColor;
                     padding: 5px;
                     width: 150px;
+                    height: 150px;
                     margin-right: 5px;
                     .border-radius(5px);
 
@@ -1516,7 +1517,6 @@ table#wpuf-address-country-state {
     :not(.attachment-name img) {
         position:absolute;
         width:100%;
-        opacity:0;
         transition:.3s;
     }
 }
